policies/grafana-enforce-folder-for-dashboard/tests/overlays/test02/generated/admissionregistration.k8s.io_v1beta1_validatingadmissionpolicybinding_vaplibtest-grafana-enforce-folder-for-dashboard-test02.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: vaplibtest-grafana-enforce-folder-for-dashboard-test02
  namespace: vaplibtest-grafana-enforce-folder-for-dashboard-test02
spec:
  matchResources:
    matchPolicy: Equivalent
    namespaceSelector:
      matchLabels:
        kubernetes.io/metadata.name: vaplibtest-grafana-enforce-folder-for-dashboard-test02
    objectSelector: {}
  policyName: vaplib-grafana-enforce-folder-for-dashboard
  validationActions:
  - Deny
