policies/grafana-enforce-folder-for-dashboard/tests/overlays/test02/generated/v1_configmap_vaplibtest-grafana-enforce-folder-for-dashboard-test02.yaml
apiVersion: v1
data:
  test: test
kind: ConfigMap
metadata:
  name: vaplibtest-grafana-enforce-folder-for-dashboard-test02
  namespace: vaplibtest-grafana-enforce-folder-for-dashboard-test02
