policies/grafana-enforce-folder-for-dashboard/tests/overlays/test02/generated/v1_namespace_vaplibtest-grafana-enforce-folder-for-dashboard-test02.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vaplibtest-grafana-enforce-folder-for-dashboard-test02
